# chatbot-tui

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/chatbot_tui/: __init__.py  llm.py  main.py  session.py  ui.py
tests/: test_llm.py  test_session.py  test_ui.py
